@@ -76,10 +76,14 @@ endif !cross
 skip:
 .PHONY: skip
 
-# Directly run texlinks.
+# Convenience targets to run texlinks and reautoconf.
 .PHONY: texlinks
 texlinks:
 	cd $(texlinks_dir) && $(MAKE) $(AM_MAKEFLAGS) run-texlinks
+
+.PHONY: triptrap
+reauto:
+	./reautoconf
 
 # Special target to run TRIP and TRAP tests and create diffs.
 .PHONY: triptrap
